# tubesML

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Examples.ipynb  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_kaggle.txt  setup.py
.github/workflows/: python-app.yml  test.yml  test_kaggle.yml
docs/source/: base.rst  clean.rst  conf.py  data_exploration.rst  error_analysis.rst  feat_en.rst  index.rst  model_comparison.rst  model_selection.rst  models.rst  process.rst  report.rst  scale.rst  utility.rst
source/: __init__.py  base.py  clean.py  dummy.py  scale.py  utility.py
tests/: context.py  test_analyzer.py  test_clean.py  test_cvscore.py  test_dummy.py  test_encoders.py  test_explore.py  test_grid.py  test_inspection.py  test_model_comparison.py  test_model_selection.py  test_pca.py  test_pipe.py  test_poly.py  test_report.py  test_scale.py  test_shap_values.py  test_stacker.py  test_utility.py  test_visualize.py
tubesml/: CV_score.py  __init__.py  base.py  clean.py  dummy.py  encoders.py  error_analysis.py  explore.py  model_comparison.py  model_inspection.py  model_selection.py  pca.py  poly.py  report.py  scale.py  shap_values.py  stacked.py  stacker.py  utility.py  visualize_error.py
