[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tubesml"
version = "1.1.0"
description = "tubesML, a package that allows for flexible ML pipelines, model validation, and model inspection"
readme = "README.rst"
authors = [
    { name="Luca Basanisi", email="luca.basanisi@gmail.com" },
]
maintainers = [
    { name="Luca Basanisi", email="luca.basanisi@gmail.com" },
]
license = { file="LICENSE" }

requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = ["kneed==0.8.5", "matplotlib>=3.10.0", "pandas>=2.3.3", "scikit-learn>=1.2.2", "scipy>=1.16.3", "seaborn>=0.13.2", "shap>=0.50.0"]

[project.optional-dependencies]
testing = [
    "pytest==9.0.2",
    "coverage==7.13.5",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/( \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''

[project.urls]
Source = "https://github.com/lucabasa/tubesML"
Documentation = "https://tubesml.readthedocs.io/"
# "Bug Tracker" = ""  # Add this if you have a bug tracker URL
